fixed the min widths on small resolution devices

--- a/public/css/pages/home-style.css
+++ b/public/css/pages/home-style.css
@@ -12,7 +12,7 @@
 .content-grid .main-grid{
     grid-area: main-grid;
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(370px, 690px));
+    grid-template-columns: repeat(auto-fit, minmax(280px, 690px));
     grid-gap: 20px;
     justify-content: center;
     padding: 0px 20px;
@@ -80,7 +80,7 @@
 .content-grid .instagram-grid{
     grid-area: instagram-grid;
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 410px));
+    grid-template-columns: repeat(auto-fill, minmax(280px, 410px));
     grid-auto-flow: dense;
     grid-gap: 20px;
     justify-content: center;
